# qml4cop

./: CMakeLists.txt  Configs.qml  Files.qml  Graph.qml  Jog.qml  MainPage.qml  Print.qml  README.md  Terminal.qml  components.qrc  images.qrc  main.cpp  qml.qrc  qml4cop.py
Components/: Extruder.qml  FanControl.qml  HeaderButton.qml  Heater.qml  JobInfo.qml  JogButton.qml  OctoPrintClient.qml  OctoPrintShared.js  PaneBase.qml  PrintButton.qml  PrintProgress.qml  RateControl.qml  StepBox.qml  qmldir
DEBIAN/: postinst  prerm
configs/: qml4cop.conf  qtquickcontrols2.conf
scripts/: qml4cop  qml4cop.service
